Fix language icon on mobile

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -22,6 +22,12 @@
 	vertical-align: top;
 }
 
+.nav-item:last-of-type .mobile-dropdown-title > span:first-of-type {
+	font-size: 1.75rem;
+	margin-left: 0.15rem;
+	vertical-align: top;
+}
+
 kbd {
 	&.l {
 		border-radius: 15px 6px 6px 6px;
